--- a/frontend-absensi-gym/src/index.html
+++ b/frontend-absensi-gym/src/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" type="image/png" href="assets/icons/icon-192x192.png">
+  <meta name="theme-color" content="#1976d2">
   <meta charset="utf-8">
   <title>CHIFIT</title>
   <base href="/">
