--- a/frontend-absensi-gym/src/index.html
+++ b/frontend-absensi-gym/src/index.html
@@ -17,7 +17,7 @@
   <app-root></app-root>
 </body>
 <br><br>
-<footer class="text-center py-3 bg-light mt-auto shadow-sm foo">
+<footer class="text-center py-3 mt-auto shadow-sm foo">
   <small>&copy; 2025 Chifit (Kenni Hasim). All rights reserved.</small>
 </footer>
 </html>
