--- a/frontend-absensi-gym/src/index.html
+++ b/frontend-absensi-gym/src/index.html
@@ -12,12 +12,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
 </body>
 <br><br>
-<footer class="text-center py-3 mt-auto shadow-sm foo">
+<!-- <footer class="text-center py-3 mt-auto shadow-sm foo">
   <small>&copy; 2025 Chifit (Kenni Hasim). All rights reserved.</small>
-</footer>
+</footer> -->
 </html>
